--- a/public/css/PG.css
+++ b/public/css/PG.css
@@ -51,3 +51,18 @@
 .select2-container--default .select2-selection--single {
     height: 37.6px;
 }
+
+/* Margin Manipulation */
+/* .navbar {
+    margin-left: 0px !important;
+} */
+
+/* Card Title Manipulation */
+/* .card-title {
+    float: none !important;
+} */
+
+/* .col-md-3 {
+    flex: unset;
+    max-width: unset;
+} */
