--- a/public/css/PG.css
+++ b/public/css/PG.css
@@ -61,10 +61,16 @@
     z-index: 2;
 }
 
+/* Loader Manipulation */
 #loader {
     position: absolute;
     z-index: 1;
     width: 100vw;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.8);
+}
+
+/* Padding Manipulation */
+.pl-20 {
+    padding-left: 20px;
 }
