add notification FE and BE

--- a/public/css/PG.css
+++ b/public/css/PG.css
@@ -4,7 +4,7 @@
 
 .log-badge {
     margin-top: -20px;
-    top: 45px;
+    top: 78px;
 }
 
 /* Width Manipulation */
@@ -14,6 +14,10 @@
 
 .col-w-4 {
     width: 30% !important;
+}
+
+.w-px-200 {
+    width: 200px;
 }
 
 /* Image Manipulation */
